mobile alignment fix

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -346,6 +346,7 @@ a , button a {
     font-size: .7rem;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 #home h4 :nth-child(1){
